# pg-bridges

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  flake.nix  pg_elixir--0.1.0.sql  pg_elixir.control
.github/workflows/: ci.yml
elixir_sidecar/: mix.exs
elixir_sidecar/config/: config.exs
elixir_sidecar/lib/elixir_sidecar/: application.ex  benchmark.ex  code_loader.ex  function_registry.ex  server.ex
examples/: advanced_usage.sql  basic_usage.sql
src/: bgworker.rs  ipc.rs  lib.rs  process.rs  protocol.rs
tests/: integration_test.rs
