[package]
name = "pg_elixir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pgrx_embed_pg_elixir"
path = "src/bin/pgrx_embed.rs"


[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.14"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"
bytes = "1.5"

[dev-dependencies]
pgrx-tests = "0.14"

[profile.dev]
panic = "unwind"
opt-level = 0
lto = false

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1